--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
       <p class="hero-text">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
         experience, and overall efficiency.</p>
       <div class="stats">
-        <span class="companies">
+        <div class="companies">
           <p class="numbers">10k+</p>
           <p class="words">companies</p>
-        </span>       
-        <span class="templates">
+        </div>       
+        <div class="templates">
           <p class="numbers">314</p>
            <p class="words">templates</p>
-        </span>         
-        <span class="queries">
+        </div>         
+        <div class="queries">
           <p class="numbers">12M+</p>
           <p class="words">queries</p> 
-        </span>              
+        </div>              
       </div>   
       </article>
       <div class="img-container">
